Fixed the chopping off of the subscribe button on smaller widths

--- a/a/css/screen.css
+++ b/a/css/screen.css
@@ -932,10 +932,10 @@ a.intro-more:hover, a.intro-more:active {
 .js .subscribe-follow-container {
   display: none;
   position: absolute;
-  font-size: 16px;
-  font-size: 1.6rem;
-  line-height: 25px;
-  line-height: 2.5rem;
+  font-size: 14px;
+  font-size: 1.4rem;
+  line-height: 18px;
+  line-height: 1.8rem;
   height: 200px;
   height: 20rem;
   opacity: 0;
@@ -952,22 +952,36 @@ a.intro-more:hover, a.intro-more:active {
   top: 0;
   left: 0;
 }
+@media (min-width: 512px) {
+  /* line 7, ../sass/modules/subscribe-follow.sass */
+  .js .subscribe-follow-container {
+    font-size: 16px;
+    font-size: 1.6rem;
+    line-height: 25px;
+    line-height: 2.5rem;
+  }
+}
 
-/* line 21, ../sass/modules/subscribe-follow.sass */
+/* line 25, ../sass/modules/subscribe-follow.sass */
 .js .subscribe-follow {
   max-width: 30em;
   margin: 0 auto;
-  margin-top: 35px;
-  margin-top: 3.5rem;
+}
+@media (min-width: 512px) {
+  /* line 25, ../sass/modules/subscribe-follow.sass */
+  .js .subscribe-follow {
+    margin-top: 35px;
+    margin-top: 3.5rem;
+  }
 }
 
-/* line 26, ../sass/modules/subscribe-follow.sass */
+/* line 31, ../sass/modules/subscribe-follow.sass */
 .js.is-subscribe-follow .subscribe-follow-container {
   display: block;
   opacity: 1;
 }
 
-/* line 30, ../sass/modules/subscribe-follow.sass */
+/* line 35, ../sass/modules/subscribe-follow.sass */
 .js .about-name, .js .about-description {
   opacity: 1;
   -webkit-transition-property: opacity;
@@ -980,43 +994,48 @@ a.intro-more:hover, a.intro-more:active {
   transition-duration: 0.5s;
 }
 
-/* line 36, ../sass/modules/subscribe-follow.sass */
+/* line 41, ../sass/modules/subscribe-follow.sass */
 .js.is-subscribe-follow .about-name, .js.is-subscribe-follow .about-description {
   opacity: 0;
 }
 
-/* line 40, ../sass/modules/subscribe-follow.sass */
+/* line 45, ../sass/modules/subscribe-follow.sass */
 .js .subscribe-follow .btn-default, .js .about .btn-default, .is-home .subscribe-follow .btn-default, .is-home .about .btn-default {
   color: rgba(255, 255, 255, 0.7);
   background-color: rgba(255, 255, 255, 0);
   border-color: rgba(255, 255, 255, 0.7);
-  margin-top: -5px;
-  margin-top: -0.5rem;
   position: relative;
   z-index: 10;
 }
-/* line 47, ../sass/modules/subscribe-follow.sass */
+/* line 51, ../sass/modules/subscribe-follow.sass */
 .js .subscribe-follow .btn-default:hover, .js .subscribe-follow .btn-default:active, .js .subscribe-follow .btn-default:focus, .js .about .btn-default:hover, .js .about .btn-default:active, .js .about .btn-default:focus, .is-home .subscribe-follow .btn-default:hover, .is-home .subscribe-follow .btn-default:active, .is-home .subscribe-follow .btn-default:focus, .is-home .about .btn-default:hover, .is-home .about .btn-default:active, .is-home .about .btn-default:focus {
   color: white;
   border-color: white;
   background-color: rgba(255, 255, 255, 0.1);
   outline: none;
 }
+@media (min-width: 512px) {
+  /* line 45, ../sass/modules/subscribe-follow.sass */
+  .js .subscribe-follow .btn-default, .js .about .btn-default, .is-home .subscribe-follow .btn-default, .is-home .about .btn-default {
+    margin-top: -5px;
+    margin-top: -0.5rem;
+  }
+}
 
-/* line 54, ../sass/modules/subscribe-follow.sass */
+/* line 60, ../sass/modules/subscribe-follow.sass */
 .is-subscribe-follow .about .btn-default {
   color: #bb5400;
   background-color: rgba(255, 255, 255, 0.6);
   border-color: rgba(255, 255, 255, 0.8);
 }
-/* line 58, ../sass/modules/subscribe-follow.sass */
+/* line 64, ../sass/modules/subscribe-follow.sass */
 .is-subscribe-follow .about .btn-default:hover, .is-subscribe-follow .about .btn-default:active, .is-subscribe-follow .about .btn-default:focus {
   color: #bb5400;
   background-color: rgba(255, 255, 255, 0.8);
   border-color: white;
 }
 
-/* line 63, ../sass/modules/subscribe-follow.sass */
+/* line 69, ../sass/modules/subscribe-follow.sass */
 .subscribe-follow-link .fa {
   margin-left: -2px;
   margin-left: -0.2rem;
@@ -1024,17 +1043,21 @@ a.intro-more:hover, a.intro-more:active {
   margin-right: 0.2rem;
 }
 
-/* line 67, ../sass/modules/subscribe-follow.sass */
-p.about-signature {
-  padding-top: 1px;
-  padding-top: 0.1rem;
+@media (min-width: 512px) {
+  /* line 73, ../sass/modules/subscribe-follow.sass */
+  p.about-signature {
+    padding-top: 5px;
+    padding-top: 0.5rem;
+    margin-top: -5px;
+    margin-top: -0.5rem;
+  }
 }
 
-/* line 70, ../sass/modules/subscribe-follow.sass */
+/* line 78, ../sass/modules/subscribe-follow.sass */
 .js .subscribe-follow {
   color: rgba(255, 255, 255, 0.7);
 }
-/* line 72, ../sass/modules/subscribe-follow.sass */
+/* line 80, ../sass/modules/subscribe-follow.sass */
 .js .subscribe-follow .subscribe-follow-title {
   font-family: adelle-sans, "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 20px;
@@ -1044,23 +1067,23 @@ p.about-signature {
   font-weight: normal;
   color: white;
 }
-/* line 78, ../sass/modules/subscribe-follow.sass */
+/* line 86, ../sass/modules/subscribe-follow.sass */
 .js .subscribe-follow a {
   color: inherit;
   text-decoration: none;
 }
-/* line 81, ../sass/modules/subscribe-follow.sass */
+/* line 89, ../sass/modules/subscribe-follow.sass */
 .js .subscribe-follow a:hover, .js .subscribe-follow a:active {
   color: white;
 }
 
-/* line 85, ../sass/modules/subscribe-follow.sass */
+/* line 93, ../sass/modules/subscribe-follow.sass */
 .js .subscribe-follow-subscribe .fa {
   margin-left: 5px;
   margin-left: 0.5rem;
 }
 
-/* line 89, ../sass/modules/subscribe-follow.sass */
+/* line 97, ../sass/modules/subscribe-follow.sass */
 .js .subscribe-follow-follow .fa {
   font-size: 25px;
   font-size: 2.5rem;
@@ -1069,12 +1092,12 @@ p.about-signature {
   margin-right: 10px;
   margin-right: 1rem;
 }
-/* line 93, ../sass/modules/subscribe-follow.sass */
+/* line 101, ../sass/modules/subscribe-follow.sass */
 .js .subscribe-follow-follow a:last-of-type .fa {
   margin-right: 0;
 }
 
-/* line 96, ../sass/modules/subscribe-follow.sass */
+/* line 104, ../sass/modules/subscribe-follow.sass */
 .js .subscribe-follow-subscribe-email-address {
   background: none;
   border: 1px solid;
@@ -1106,7 +1129,7 @@ p.about-signature {
 .js .subscribe-follow-subscribe-email-address::-webkit-input-placeholder {
   color: rgba(255, 255, 255, 0.4);
 }
-/* line 106, ../sass/modules/subscribe-follow.sass */
+/* line 114, ../sass/modules/subscribe-follow.sass */
 .js .subscribe-follow-subscribe-email-address:focus {
   background-color: rgba(255, 255, 255, 0.1);
   color: white;
